# jammagame-boilerplate

./: .gitignore  CMakeLists.txt  README.md
assets/: assets.gap
emscripten/: emscripten-shell.html
src/: game_config.h  main.cpp  metadata.cpp
